5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4349/executions/1577_1560.log
== TEST (2019-03-26 18:22:32) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra"
print(string.lower)
-- OUTPUT:
<built-in method lower of str object at 0x7f0050e898a0>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:22:39) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condesa de lovelace, nasceu em 1815,na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:22:42) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.1761
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condesa de lovelace, nasceu em 1815,na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:22:48) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condesa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:22:49) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.165979
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condesa de lovelace, nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:22:50) 
-- CODE:
string = "Augusta Ada Byron, a Condesa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condesa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:02) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:23:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.167897
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:04) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:19) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower()
-- ERROR:
File "XXXX", line 3
    
                        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:39) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:23:40) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.191083
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:23:41) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815,na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815,na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:23:56) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.180132
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 08:09:50) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.13933
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 18:49:12) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
